Sweep through compile warnings, mostly deprecation